--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ all-features = true
 
 [features]
 default = []
+trait_serde_json = ["serde_json"]
 regular_expression = ["regex"]
 
 [dev-dependencies]
@@ -29,6 +30,8 @@ test-case-derive = "0"
 [dependencies]
 failure = "0"
 regex = { version = "1", optional = true }
+reqwest = "0"
+serde_json = { version = "1", optional = true }
 strum = "0"
 strum_macros = "0"
 url = "1"
