--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,7 @@ repos:
   - id: end-of-file-fixer
   - id: pretty-format-json
     args: [--autofix, --indent, '2']
+    exclude: Invalid\.json$
   - id: check-yaml
   - id: check-added-large-files
 - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
