--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,7 @@ repos:
     args: [--autofix, --indent, '2']
     exclude: Invalid\.json$
   - id: check-yaml
+    exclude: Invalid\.yaml$
   - id: check-added-large-files
 - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
   rev: v1.2.2
@@ -17,6 +18,7 @@ repos:
     args: [--autofix]
   - id: pretty-format-yaml
     args: [--autofix, --indent, '2']
+    exclude: Invalid\.yaml$
   - id: pretty-format-ini
     args: [--autofix]
     files: ^.+\.(cfg|ini|toml)$
