--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,11 +21,14 @@ all-features = true
 
 [features]
 default = []
+trait_serde_json = ["serde_json"]
+trait_serde_yaml = ["serde_yaml"]
 trait_testing = ["json-trait-rs"]
 regular_expression = ["regex"]
 
 [dev-dependencies]
 mockito = "0"
+serde_json = "1"
 test-case-derive = "0"
 
 [dependencies]
@@ -34,6 +37,7 @@ json-trait-rs = { version = "0", optional = true }
 regex = { version = "1", optional = true }
 reqwest = "0"
 serde_json = { version = "1", optional = true }
+serde_yaml = { version = "0", optional = true }
 strum = "0"
 strum_macros = "0"
 url = "1"
