--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ all-features = true
 
 [features]
 default = []
+trait_json = ["json"]
 trait_serde_json = ["serde_json"]
 trait_serde_yaml = ["serde_yaml"]
 trait_testing = ["json-trait-rs"]
@@ -34,6 +35,7 @@ test-case-derive = "0"
 [dependencies]
 failure = "0"
 json-trait-rs = { version = "0", optional = true }
+json = { version = "0", optional = true }
 regex = { version = "1", optional = true }
 reqwest = "0"
 serde_json = { version = "1", optional = true }
