--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,14 +21,16 @@ all-features = true
 
 [features]
 default = []
-trait_serde_json = ["serde_json"]
+trait_testing = ["json-trait-rs"]
 regular_expression = ["regex"]
 
 [dev-dependencies]
+mockito = "0"
 test-case-derive = "0"
 
 [dependencies]
 failure = "0"
+json-trait-rs = { version = "0", optional = true }
 regex = { version = "1", optional = true }
 reqwest = "0"
 serde_json = { version = "1", optional = true }
