--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 authors = ["Samuele Maci <macisamuele@gmail.com>"]
+categories = ["caching", "data-structures", "development-tools", "encoding", "parsing"]
 description = "Rust interface to load generic objects from an URI"
 repository = "https://github.com/macisamuele/loader-rs"
 edition = "2018"
@@ -42,3 +43,7 @@ serde_yaml = { version = "0", optional = true }
 strum = "0"
 strum_macros = "0"
 url = "1"
+
+[patch.crates-io]
+# TODO: Remove patch once https://github.com/synek317/test-case-derive/pull/5 is merged
+test-case-derive = { git = "https://github.com/macisamuele/test-case-derive", branch = "maci-allow-build-on-stable"}
