--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ regular_expression = ["regex"]
 [dev-dependencies]
 mockito = "0"
 serde_json = "1"
-test-case-derive = "0"
+test-case = "0"
 
 [dependencies]
 json-trait-rs = "^0.3"
@@ -42,7 +42,3 @@ serde_yaml = { version = "0", optional = true }
 strum = "0"
 strum_macros = "0"
 url = "1"
-
-[patch.crates-io]
-# TODO: Remove patch once https://github.com/synek317/test-case-derive/pull/5 is merged
-test-case-derive = { git = "https://github.com/macisamuele/test-case-derive", branch = "maci-allow-build-on-stable"}
