--- a/.travis.yml
+++ b/.travis.yml
@@ -34,13 +34,13 @@ before_script:
 script:
 - make "${MAKE_TARGET}"
 
-cache:
-  timeout: 3600
-  directories:
-  - ${HOME}/.cache/pre-commit
-  - ${CODECOV_DIR}
-  - ${HOME}/.cargo/
-  - ${TRAVIS_BUILD_DIR}/target
+# cache:
+#   timeout: 3600
+#   directories:
+#   - ${HOME}/.cache/pre-commit
+#   - ${CODECOV_DIR}
+#   - ${HOME}/.cargo/
+#   - ${TRAVIS_BUILD_DIR}/target
 
 # notifications:
 #   email: false
