--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ test-case = "0"
 json-trait-rs = "^0.3"
 json = { version = "0", optional = true }
 regex = { version = "1", optional = true }
-reqwest = "0"
+reqwest = { version = "0.10", features = ["blocking", "gzip"] }
 serde_json = { version = "1", optional = true }
 serde_yaml = { version = "0", optional = true }
 strum = "0"
