--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,8 +33,10 @@ serde_json = "1"
 test-case = "0"
 
 [dependencies]
+cached = "0"
 json-trait-rs = "^0.3"
 json = { version = "0", optional = true }
+parking_lot = "0"
 regex = { version = "1", optional = true }
 reqwest = { version = "0.10", features = ["blocking", "gzip"] }
 serde_json = { version = "1", optional = true }
