--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ test-case = "0"
 cached = "0"
 json-trait-rs = "^0.3"
 json = { version = "0", optional = true }
+lazy_static = "1"
 parking_lot = "0"
 regex = { version = "1", optional = true }
 reqwest = { version = "0.10", features = ["blocking", "gzip"] }
