--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: rust
-rust: stable
+rust: nightly
+
+os: linux
+dist: bionic
 
 env:
   global:
@@ -8,22 +11,16 @@ env:
 
 matrix:
   include:
-  # TODO: add osx and windows testing environments
-  - os: linux
-    dist: xenial
-    env: MAKE_TARGET=coverage
-    rust: nightly
-  - os: linux
-    dist: xenial
-    env: MAKE_TARGET=test
-  - os: linux
-    dist: xenial
-    env: MAKE_TARGET=doc
-  - os: linux
-    dist: xenial
-    env: MAKE_TARGET=lint
-  allow_failures:
+  - env: MAKE_TARGET=coverage
+  - env: MAKE_TARGET=test
+  - env: MAKE_TARGET=doc
   - env: MAKE_TARGET=lint
+    # Before updating this make sure that nighly-YYYY-MM-DD contains either rustfmt and clippy
+    # Use
+    #   * `curl -s https://rust-lang.github.io/rustup-components-history/x86_64-unknown-linux-gnu/clippy`
+    #   * `curl -s https://rust-lang.github.io/rustup-components-history/x86_64-unknown-linux-gnu/rustfmt`
+    # to validate that both tools are available
+    rust: nightly-2020-04-10
 
 install:
 - bash scripts/travis/install.sh
