--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,9 +22,10 @@ all-features = true
 
 [features]
 default = []
-trait_json = ["json", "json-trait-rs/trait_json"]
-trait_serde_json = ["serde_json", "json-trait-rs/trait_serde_json"]
-trait_serde_yaml = ["serde_yaml", "json-trait-rs/trait_serde_yaml"]
+trait_json_trait_rs = ["json-trait-rs"]
+trait_json = ["json", "json-trait-rs/trait_json", "trait_json_trait_rs"]
+trait_serde_json = ["serde_json", "json-trait-rs/trait_serde_json", "trait_json_trait_rs"]
+trait_serde_yaml = ["serde_yaml", "json-trait-rs/trait_serde_yaml", "trait_json_trait_rs"]
 regular_expression = ["regex"]
 
 [dev-dependencies]
@@ -34,7 +35,7 @@ test-case = "0"
 
 [dependencies]
 cached = "0"
-json-trait-rs = "0"
+json-trait-rs = { version = "0", optional = true }
 json = { version = "0", optional = true }
 lazy_static = "1"
 parking_lot = "0"
