--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ trait_serde_yaml = ["json-loader", "serde_yaml", "json-trait-rs/trait_serde_yaml
 regular_expression = ["regex"]
 
 [dev-dependencies]
+derive_builder = "0"
 mockito = "0"
 serde_json = "1"
 test-case = "1"
