--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ all-features = true
 
 [features]
 default = []
+testing-helpers = ["derive_builder", "mockito"]
 json-loader = ["json-trait-rs"]
 trait_json = ["json-loader", "json", "json-trait-rs/trait_json"]
 trait_serde_json = ["json-loader", "serde_json", "json-trait-rs/trait_serde_json"]
@@ -35,9 +36,11 @@ test-case = "1"
 
 [dependencies]
 cached = "0"
+derive_builder = {version = "0", optional = true }
 json-trait-rs = { version = "0", optional = true }
 json = { version = "0", optional = true }
 lazy_static = "1"
+mockito = {version = "0", optional = true }
 parking_lot = "0"
 reqwest = { version = "0.10", features = ["blocking", "gzip"] }
 serde_json = { version = "1", optional = true }
