Update RustTypeLoader implementation in order to perform actual JSON parsing
As the loader should be used only for tests it has been moved under the testing-helpers feature and relies on serde-json
capabilities instead of implementing from scratch the parsing.
NOTE: By depending on serde-json capabilities we're not able to actually parse i128 numbers but for testing purposes it's ok.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ all-features = true
 
 [features]
 default = []
-testing-helpers = ["derive_builder", "mockito"]
+testing-helpers = ["derive_builder", "mockito", "serde_json", "json-trait-rs/trait_serde_json"]
 json-loader = ["json-trait-rs"]
 trait_json = ["json-loader", "json", "json-trait-rs/trait_json"]
 trait_serde_json = ["json-loader", "serde_json", "json-trait-rs/trait_serde_json"]
